fix mobile navigation whitespace

--- a/assets/style-main.css
+++ b/assets/style-main.css
@@ -707,7 +707,7 @@ a:focus {
 
 @media (max-width: 361px) {
   .pushmenu.menu-home5 {
-    width: 300px; } }
+    width: 362px; } }
 .nav-home5 > li {
   position: relative;
   display: block; }
